--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -114,6 +114,11 @@ The following options are available:
  allow self-loops in Dynamic Bayesian Networks (by default self-loops are disabled)
 \item[\texttt{-k, -\hspace{0pt}-cpu <number>}]~\\
  use number of processes for multiprocessing - by default 0 is used (no multiprocessing)
+\item[\texttt{-j, -\hspace{0pt}-subset <file> | "concat"}]~\\
+ input file with subset of variables (divided by space character); the feature is useful when the inference complexity is too high, allowing distributed usage of BNFinder; after all the variables are processed (including regulators), put resulting \texttt{genes_*} files into one folder and use \texttt{concat} instead of file name; if only particular variables are subject for parents set inference, it is advisable to simply edit input data file instead of using this argument
+\item[\texttt{-q, -\hspace{0pt}-algorithm <name>}]~\\
+ parallelization algorithm: \texttt{setwise} (default, uses each provided core to compute parents set of one variable before proceeding further) or \texttt{hybrid} (evenly distributes cores between variables, it is recommended to use when underlying network is supposed to be homogeneous with respect to the number of parents per variable, in cases when computational complexity is low or small parents set limit is used) 
+ 
 \end{description}
 
 \subsubsection{bnf-cv}
