--- a/doc/doc_all.tex
+++ b/doc/doc_all.tex
@@ -30,9 +30,9 @@
 \newtheorem{ass}{Assumption}{\bfseries}{\itshape}
 
 %\newcommand{\url}{}
-\release{2.0}
+\release{2.2}
 \title{ BNfinder documentation}
-\author{Norbert Dojer, Paweł Bednarz, Agnieszka Podsiadło i Bartek Wilczyński}
+\author{Norbert Dojer, Paweł Bednarz, Agnieszka Podsiadło, Alina Frolova and Bartek Wilczyński}
 \begin{document}
 \maketitle
 \tableofcontents
